test/libpolynomial/syntaxTests/inlineAssembly/invalid/local_variable_access_out_of_functions.pol
contract test {
    function f() public {
        uint a;
        assembly {
            function g() -> x { x := a }
        }
    }
}
// ----
// DeclarationError: (114-115): Cannot access local Polynomial variables from inside an inline assembly function.
